checkpatch-results/home/fedora/lkml-analysis/lkml/0/0000344891.8e73d15569f5a0577a8fa73f87817b476f68864f
WARNING:COMMIT_LOG_LONG_LINE: Possible unwrapped commit description (prefer a maximum 75 chars per line)
#36: 
> > >drivers/ieee1394/nodemgr.c:471: error: structure has no member named `name'

ERROR:DIFF_IN_COMMIT_MSG: Avoid using diff content in the commit message - patch(1) might not work
#55: 
--- a/drivers/pnp/core.c	2003-08-09 04:33:18.000000000 +0000

Avoid having diff content in commit message.
This causes problems when one tries to apply a file containing both
the changelog and the diff because patch(1) tries to apply the diff
which it found in the changelog.

See: https://lore.kernel.org/lkml/20150611134006.9df79a893e3636019ad2759e@linux-foundation.org/

WARNING:PREFER_PR_LEVEL: Prefer [subsystem eg: netdev]_info([subsystem]dev, ... then dev_info(dev, ... then pr_info(...  to printk(KERN_INFO ...
#91: FILE: drivers/pnp/isapnp/core.c:1147:
+			printk(KERN_INFO "isapnp: Card '%s'\n", card->name[0]?card->name:"Unknown");

CHECK:SPACING: spaces required around that '?' (ctx:VxV)
#91: FILE: drivers/pnp/isapnp/core.c:1147:
+			printk(KERN_INFO "isapnp: Card '%s'\n", card->name[0]?card->name:"Unknown");
 			                                                     ^

Whitespace style used in the kernel sources is described in kernel docs.

See: https://www.kernel.org/doc/html/latest/process/coding-style.html#spaces

CHECK:SPACING: spaces required around that ':' (ctx:VxV)
#91: FILE: drivers/pnp/isapnp/core.c:1147:
+			printk(KERN_INFO "isapnp: Card '%s'\n", card->name[0]?card->name:"Unknown");
 			                                                                ^

WARNING:LONG_LINE_STRING: line length of 110 exceeds 100 columns
#96: FILE: drivers/pnp/isapnp/core.c:1151:
+				printk(KERN_INFO "isapnp:   Device '%s'\n", dev->name[0]?dev->name:"Unknown");

A string starts before but extends beyond the maximum line length.
To use a different maximum line length, the --max-line-length=n option
may be added while invoking checkpatch.

See: https://www.kernel.org/doc/html/latest/process/coding-style.html#breaking-long-lines-and-strings

WARNING:PREFER_PR_LEVEL: Prefer [subsystem eg: netdev]_info([subsystem]dev, ... then dev_info(dev, ... then pr_info(...  to printk(KERN_INFO ...
#96: FILE: drivers/pnp/isapnp/core.c:1151:
+				printk(KERN_INFO "isapnp:   Device '%s'\n", dev->name[0]?dev->name:"Unknown");

CHECK:SPACING: spaces required around that '?' (ctx:VxV)
#96: FILE: drivers/pnp/isapnp/core.c:1151:
+				printk(KERN_INFO "isapnp:   Device '%s'\n", dev->name[0]?dev->name:"Unknown");
 				                                                        ^

CHECK:SPACING: spaces required around that ':' (ctx:VxV)
#96: FILE: drivers/pnp/isapnp/core.c:1151:
+				printk(KERN_INFO "isapnp:   Device '%s'\n", dev->name[0]?dev->name:"Unknown");
 				                                                                  ^

WARNING:HOTPLUG_SECTION: Using __devinit is unnecessary
#104: FILE: drivers/serial/8250_pnp.c:370:
 static int __devinit serial_pnp_guess_board(struct pnp_dev *dev, int *flags)

ERROR:COMPLEX_MACRO: Macros with complex values should be enclosed in parentheses
#142: FILE: include/linux/pnp.h:210:
+#define pnp_dev_name(dev) (dev)->name

./tmp.EfiDkiSq0Q//home/fedora/lkml-analysis/lkml/0/patch.offset.0000344891.commit.8e73d15569f5a0577a8fa73f87817b476f68864f total: 2 errors, 5 warnings, 4 checks, 73 lines checked

NOTE: For some of the reported defects, checkpatch may be able to
      mechanically convert to the typical style using --fix or --fix-inplace.

./tmp.EfiDkiSq0Q//home/fedora/lkml-analysis/lkml/0/patch.offset.0000344891.commit.8e73d15569f5a0577a8fa73f87817b476f68864f has style problems, please review.

NOTE: If any of the errors are false positives, please report
      them to the maintainer, see CHECKPATCH in MAINTAINERS.
